<resources>
    <string name="app_name">Coin Master</string>
    <string name="title_activity_home_screen">CoinApp</string>
    <string name="coin_name_placeholder">COIN</string>
    <string name="price_placeholder">60 000$</string>
    <string name="dollar_holding_placeholder">1 000$</string>
    <string name="coin_holdings_placeholder">0.01 BTC</string>
    <string name="no_data_loaded">No data loaded</string>
    <string name="search_coin_activity_title">Add new coins</string>
    <string name="added_coins">Currently added:</string>
    <string name="user_type_prefix">You are</string>
    <string name="search">Search</string>
    <string name="rank_placeholder">#1</string>
    <string name="market_cap_placeholder">1 000 000 000$</string>
    <string name="title_activity_coin_detail">CoinDetailActivity</string>
    <string name="coin_info">Coin Info</string>
    <string name="transactions">Transactions</string>
    <string name="premium_user">Premium User</string>
    <string name="basic_user">Basic User</string>

    <!-- COIN INFO STRINGS -->
    <string name="holdings">Holdings:</string>
    <string name="zero">0</string>
    <string name="average_buy_price">Average Buy Price:</string>
    <string name="percentage_change">Percentage Change:</string>
    <string name="rank">Rank:</string>
    <string name="current_price">Current Price:</string>
    <string name="holdings_value">Holdings Value:</string>
    <string name="current_deposit">Current Deposit:</string>
    <string name="profit_loss">Profit / Loss:</string>
    <string name="market_cap">Market Cap:</string>
    <string name="circulating_supply">Circulating Supply:</string>

    <string name="type_placeholder">SEND</string>
    <string name="date_placeholder">03.04.2021</string>
    <string name="amount_placeholder">0.000005 BTC</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_type">Transaction Type:</string>
    <string name="price_per_coin">Price Per Coin:</string>
    <string name="amount">Amount:</string>
    <string name="fee">Fee:</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="type_description">Type Description:</string>
    <string name="price">Price</string>
    <string name="amount_edit_text">Amount</string>
    <string name="fee_edit_text">Fee</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="unwatch">Unwatch</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="no_coins">You don\'t have any coins in the watch list at the moment</string>
    <string name="no_transactions">You don\'t have any transactions at the moment</string>

    <!--    VALUES OF HOME SCREEN OVERVIEW-->
    <string name="total_holdings_heading">Total Holdings:</string>
    <string name="value_placeholder">5 000$</string>
    <string name="high_heading">Day high:</string>
    <string name="low_heading">Day low:</string>
    <string name="change_heading">Day Change:</string>
    <string name="change_value_placeholder">+ 500$</string>
    <string name="change_percentage_placeholder">+ 50%</string>
    <string name="_1d">1d</string>
    <string name="_7d">7d</string>
    <string name="_30d">30d</string>
    <string name="_90d">90d</string>
    <string name="_1y">1y</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="example_email">example@email.com</string>
    <string name="password">Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="are_you_premium">Are you Premium User?</string>
    <string name="no_account">No account?</string>
    <string name="logout">logout</string>
    <string name="no_results">No results found for specified filter.</string>

    <!--    ORDER MUST CORRESPOND TO TRANSACTION TYPE ENUM!!!!  -->
    <string-array name="transaction_types_array">
        <item>Buy</item>
        <item>Sell</item>
        <item>Move between wallets/exchanges</item>
        <item>Receive from external source</item>
        <item>Send to external source</item>
    </string-array>
</resources>